# bota_sensone

./: Dockerfile  README.md  docker-compose.yaml
bota_ethercat/: package.xml  setup.cfg  setup.py
bota_ethercat/bota_ethercat/: bota_ethercat_node.py  datacollection.py
bota_serial/ft_sensor_node/: CMakeLists.txt  package.xml
bota_serial/ft_sensor_node/docs/: diagram.md
bota_serial/ft_sensor_node/include/ft_sensor_node/: ft_filter_node.hpp
bota_serial/ft_sensor_node/launch/: ft_sensor.launch.py
bota_serial/ft_sensor_node/src/: ft_filter_node.cpp  ft_sensor_node.cpp  serial_driver
